[package]
name = 'cashier-server'
description = 'Cashier Ledger-cli server component'
version = '0.4.4'
edition = '2021'
authors = ['Alen Šiljak']
repository = 'https://github.com/alensiljak/cashier-server-rust'
categories = ['command-line-utilities', 'web-programming::http-server']
license = 'GPL-3.0-or-later'
readme = "README.md"
documentation = 'https://docs.rs/cashier-server/'

[dependencies]
axum = { version = "0.6.18", features = ['headers'] }
base64 = { version = '0.21.2' }
env_logger = "0.10.0"
http = { version = "0.2.8" }
# interactive_process = "0.1.2"
log = "0.4.19"
# mio =  { version = "0.8.8", features = ["os-ext", "os-poll"] }
serde_json = "1.0.93"
tokio = { version = "1.28.2", features = [ "io-util",
    "macros", "process",
    "rt-multi-thread",
    "signal",
    # 'tracing'
] }
tower-http = { version = '0.3.5', features = ['cors', 'trace'] }
tracing = '0.1.37'
tracing-subscriber = { version = '0.3.16', features = ['env-filter'] }
