[package]
name = 'cashier-server'
description = 'Cashier Ledger-cli server component'
version = '1.0.1'
edition = '2021'
authors = ['Alen Šiljak']
repository = 'https://github.com/alensiljak/cashier-server-rust'
categories = ['command-line-utilities', 'web-programming::http-server']
license = 'GPL-3.0-or-later'
readme = "README.md"
documentation = 'https://docs.rs/cashier-server/'

[dependencies]
axum = { version = "0.8.0", features = ['http1'] }
base64 = { version = '0.22.1' }
dotenvy = "0.15.7"
env_logger = "0.11.3"
http = { version = "1.1.0" }
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.43.0", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = '0.6.1', features = ['cors', 'trace'] }
tracing = '0.1.40'
tracing-subscriber = { version = '0.3.18', features = ['env-filter'] }
